force-app/main/default/objects/Fulfillment_Order__c/Fulfillment_Order__c.object-meta.xml
<CustomObject>
    <label>Fulfillment Order</label>
    <nameField>
        <label>Fulfillment Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fulfillment Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>