force-app/main/default/objects/Fulfillment_Order__c/fields/Carrier_preference__c.field-meta.xml
<CustomField>
    <fullName>Carrier_preference__c</fullName>
    <label>Carrier preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BlockAMZL</fullName>
            </value>
            <value>
                <fullName>AllowAMZL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>