force-app/main/default/objects/Fulfillment_Order__c/fields/Fulfill_To_Address_Line1__c.field-meta.xml
<CustomField>
    <fullName>Fulfill_To_Address_Line1__c</fullName>
    <label>Fulfill To Address Line1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>