force-app/main/default/objects/Fulfillment_Order__c/fields/Fulfilled_Location__c.field-meta.xml
<CustomField>
    <fullName>Fulfilled_Location__c</fullName>
    <label>Fulfilled Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amazon</fullName>
            </value>
            <value>
                <fullName>ShipBob</fullName>
            </value>
            <value>
                <fullName>Warehouse-Canada</fullName>
            </value>
            <value>
                <fullName>Warehouse-Houston</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>