force-app/main/default/objects/Fulfillment_Order__c/fields/Fulfilled_to_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Fulfilled_to_Address_City__c</fullName>
    <label>Fulfilled to Address City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>