force-app/main/default/objects/Fulfillment_Order__c/fields/Fulfilled_to_Address_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Fulfilled_to_Address_Country_Code__c</fullName>
    <label>Fulfilled to Address Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>CAD</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>