force-app/main/default/objects/Fulfillment_Order__c/fields/Fulfilled_To_Address_State_Code__c.field-meta.xml
<CustomField>
    <fullName>Fulfilled_To_Address_State_Code__c</fullName>
    <label>Fulfilled To Address State Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>