force-app/main/default/objects/Fulfillment_Order__c/fields/Fulfilled_To_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Fulfilled_To_Email_Address__c</fullName>
    <label>Fulfilled To Email Address</label>
    <type>Email</type>
</CustomField>