force-app/main/default/objects/Fulfillment_Order__c/fields/Fulfilled_To_Phone__c.field-meta.xml
<CustomField>
    <fullName>Fulfilled_To_Phone__c</fullName>
    <label>Fulfilled To Phone</label>
    <type>Phone</type>
</CustomField>