force-app/main/default/objects/Fulfillment_Order__c/fields/Fulfillment_Action__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Action__c</fullName>
    <label>Fulfillment Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ship</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>