force-app/main/default/objects/Fulfillment_Order__c/fields/Fulfillment_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Order_Number__c</fullName>
    <displayFormat>A-{000}</displayFormat>
    <label>Fulfillment Order Number</label>
    <type>AutoNumber</type>
</CustomField>