force-app/main/default/objects/Fulfillment_Order__c/fields/Invoice1__c.field-meta.xml
<CustomField>
    <fullName>Invoice1__c</fullName>
    <label>Invoice1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>