force-app/main/default/objects/Fulfillment_Order__c/fields/Market_Place_Id__c.field-meta.xml
<CustomField>
    <fullName>Market_Place_Id__c</fullName>
    <label>Market Place Id</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>