force-app/main/default/objects/Fulfillment_Order__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Fulfillment Orders</relationshipLabel>
    <relationshipName>Fulfillment_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>