force-app/main/default/objects/Fulfillment_Order__c/fields/Order_Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Order_Delivery_Method__c</fullName>
    <label>Order Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mail Delivery</fullName>
            </value>
            <value>
                <fullName>Physical Delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>