force-app/main/default/objects/Fulfillment_Order__c/fields/Order_Processing_Stage__c.field-meta.xml
<CustomField>
    <fullName>Order_Processing_Stage__c</fullName>
    <label>Order Processing Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order Created</fullName>
            </value>
            <value>
                <fullName>Warehouse Packaging</fullName>
            </value>
            <value>
                <fullName>Package Labeled</fullName>
            </value>
            <value>
                <fullName>Fulfillment Processing</fullName>
            </value>
            <value>
                <fullName>Order Shipped/In Transit</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Sales Order Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>