force-app/main/default/objects/Fulfillment_Order__c/fields/Order_Recipient1__c.field-meta.xml
<CustomField>
    <fullName>Order_Recipient1__c</fullName>
    <formula>First_Name__c&amp;&quot;&quot;&amp;Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Recipient1</label>
    <type>Text</type>
</CustomField>