force-app/main/default/objects/Fulfillment_Order__c/fields/Payment_Intent_Id__c.field-meta.xml
<CustomField>
    <fullName>Payment_Intent_Id__c</fullName>
    <label>Payment Intent ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>