force-app/main/default/objects/Fulfillment_Order__c/fields/Preffered_Shipping_Date__c.field-meta.xml
<CustomField>
    <fullName>Preffered_Shipping_Date__c</fullName>
    <label>Preffered Shipping Date</label>
    <type>Date</type>
</CustomField>