force-app/main/default/objects/Fulfillment_Order__c/fields/Product_Adjustments_with_Tax__c.field-meta.xml
<CustomField>
    <fullName>Product_Adjustments_with_Tax__c</fullName>
    <label>Product Adjustments with Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>