force-app/main/default/objects/Fulfillment_Order__c/fields/Product_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Product_Subtotal__c</fullName>
    <label>Product Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>