force-app/main/default/objects/Fulfillment_Order__c/fields/Product_Subtotal_Tax__c.field-meta.xml
<CustomField>
    <fullName>Product_Subtotal_Tax__c</fullName>
    <label>Product Subtotal Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>