force-app/main/default/objects/Fulfillment_Order__c/fields/Related_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Related_Invoice__c</fullName>
    <label>Related Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Fulfillment Orders</relationshipLabel>
    <relationshipName>Fulfillment_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>