force-app/main/default/objects/Fulfillment_Order__c/fields/Seller_Central_Tracking_Status__c.field-meta.xml
<CustomField>
    <fullName>Seller_Central_Tracking_Status__c</fullName>
    <label>Seller Central Tracking Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>