force-app/main/default/objects/Fulfillment_Order__c/fields/Service_appointment__c.field-meta.xml
<CustomField>
    <fullName>Service_appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service appointment</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Fulfillment Orders (Service appointment)</relationshipLabel>
    <relationshipName>Fulfillment_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>