force-app/main/default/objects/Fulfillment_Order__c/fields/Shipping_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Subtotal__c</fullName>
    <label>Shipping Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>