force-app/main/default/objects/Fulfillment_Order__c/fields/Source_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Order_Id__c</fullName>
    <label>Source Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Fulfillment Orders</relationshipLabel>
    <relationshipName>Fulfillment_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>