force-app/main/default/objects/Fulfillment_Order__c/fields/Tax_Locale_Type__c.field-meta.xml
<CustomField>
    <fullName>Tax_Locale_Type__c</fullName>
    <label>Tax Locale Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gross</fullName>
            </value>
            <value>
                <fullName>Net</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>