force-app/main/default/objects/Fulfillment_Order__c/fields/Total_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Quantity__c</fullName>
    <label>Total Quantity</label>
    <summaryForeignKey>Fulfillment_Order_Productt__c.Fulfillment_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>