force-app/main/default/objects/Fulfillment_Order__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Download (Digital)</fullName>
            </value>
            <value>
                <fullName>Email (Digital)</fullName>
            </value>
            <value>
                <fullName>In Store Pickup (Physical)</fullName>
            </value>
            <value>
                <fullName>Retail Store (Physical)</fullName>
            </value>
            <value>
                <fullName>Supplier (Dropship)</fullName>
            </value>
            <value>
                <fullName>Warehouse (Physical)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>