force-app/main/default/objects/Fulfillment_Order__c/fields/Unit_Number_Apartment_Number__c.field-meta.xml
<CustomField>
    <fullName>Unit_Number_Apartment_Number__c</fullName>
    <label>Unit Number/Apartment Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>